Fixed align-left/-right classes

--- a/docs/gtl-style.css
+++ b/docs/gtl-style.css
@@ -61,10 +61,16 @@ th, td {
 
 .align_right {
   text-align: right;
+  float: right;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .align_left {
   text-align: left;
+  float: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .error {
